--- a/DiceRollerApp.csproj
+++ b/DiceRollerApp.csproj
@@ -66,7 +66,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\RollResult.cs" />
+    <Compile Include="Models\RollDiceService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
